--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,97 @@
-anyio==3.5.0
-appnope==0.1.2
-argon2-cffi==21.3.0
+anyio==4.0.0
+argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
-Babel==2.9.1
+arrow==1.2.3
+asttokens==2.4.0
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.12.1
 backcall==0.2.0
-black==21.12b0
-bleach==4.1.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
-click==8.0.3
+beautifulsoup4==4.12.2
+bleach==6.0.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+comm==0.1.4
+contourpy==1.1.1
 cycler==0.11.0
-debugpy==1.5.1
+debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
-entrypoints==0.3
-executing==0.8.2
-fonttools==4.29.0
-idna==3.3
-ipykernel==6.7.0
-ipython==8.0.1
-ipython-genutils==0.2.0
-jedi==0.18.1
-Jinja2==3.0.3
-json5==0.9.6
-jsonschema==4.4.0
-jupyter-client==7.1.2
-jupyter-core==4.9.1
-jupyter-server==1.13.4
-jupyterlab==3.2.8
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.10.3
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mypy-extensions==0.4.3
-nbclassic==0.3.5
-nbclient==0.5.10
-nbconvert==6.4.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.8
-numpy==1.22.1
-packaging==21.3
+drawsvg==2.3.0
+executing==1.2.0
+fastjsonschema==2.18.0
+fonttools==4.42.1
+fqdn==1.5.1
+idna==3.4
+ipykernel==6.25.2
+ipython==8.15.0
+isoduration==20.11.0
+jedi==0.19.0
+Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.6
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.25.0
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mistune==3.0.1
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
+notebook_shim==0.2.3
+numpy==1.26.0
+overrides==7.4.0
+packaging==23.1
 pandocfilters==1.5.0
 parso==0.8.3
-pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.0
-platformdirs==2.4.1
-prometheus-client==0.13.0
-prompt-toolkit==3.0.24
+Pillow==10.0.1
+platformdirs==3.10.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
-Pygments==2.11.2
-pyparsing==3.0.7
-pyrsistent==0.18.1
+Pygments==2.16.1
+pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2021.3
-pyzmq==22.3.0
-requests==2.27.1
-Send2Trash==1.8.0
+python-json-logger==2.0.7
+PyYAML==6.0.1
+pyzmq==25.1.1
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.3
+Send2Trash==1.8.2
 six==1.16.0
-sniffio==1.2.0
-stack-data==0.1.4
-tabulate==0.8.9
-terminado==0.12.1
-testpath==0.5.0
-tomli==1.2.3
-tornado==6.1
-traitlets==5.1.1
-typing_extensions==4.0.1
-urllib3==1.26.8
-wcwidth==0.2.5
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.2
+tabulate==0.9.0
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.10.0
+uri-template==1.3.0
+urllib3==2.0.4
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.2.3
+websocket-client==1.6.3
